welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value avancer
avancer()
^Runner:3: error: not found: value avancer
avancer()
^Runner:4: error: not found: value avancer
avancer()
^Runner:6: error: not found: value avancer
avancer()
^Runner:8: error: not found: value avancer
avancer()
^