welcome.lessons.welcome.loopfor.LoopStairs.scala.code
avancer()
avancer()
avancer()
gauche()
avancer()
droite()
avancer()
